# opentrifi

./: .env.codex-feedback-automation.example  .env.release-deploy.example  .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/alembic/versions/: 20260507_01_hot_query_composite_indexes.py
backend/app/: analytics.py  database.py  fixed_precision.py  main.py  redis_store.py  runtime_state.py  schemas.py  settings.py  typed_json.py
backend/app/schema_parts/: agent.py  assets.py  auth.py  common.py  dashboard.py  holdings.py  inbox.py
backend/app/services/: agent_demo_service.py  agent_service.py  asset_entry_service.py  asset_record_service.py  auth_service.py  cache.py  cash_account_service.py  common_service.py  dashboard_correction_service.py  dashboard_live_service.py  dashboard_query_service.py  feedback_admin_service.py  feedback_model_service.py  feedback_user_service.py  history_service.py  history_sync_service.py  holding_projection_service.py  holding_transaction_service.py  job_service.py  market_data.py  portfolio_read_service.py  realtime_analytics_service.py  release_note_service.py  service_context.py  (+1 more)
backend/tests/: test_agent_api.py  test_analytics.py  test_api_contract.py  test_app_modularization.py  test_asset_crud.py  test_dashboard_corrections_and_audit.py  test_feedback.py  test_fixed_precision.py  test_main_contract.py  test_market_data.py  test_nginx_cache_headers.py  test_release_deploy_script.py  test_release_env.py  test_runtime_redis.py  test_schema_serialization.py  test_security.py  test_user_isolation.py
(+103 files in other folders)
