[project]
name = "opentrifi-backend"
version = "0.1.0"
description = "Backend for a personal asset tracking dashboard."
requires-python = ">=3.11"
dependencies = [
	"alembic>=1.18.4",
	"fastapi>=0.115.12",
	"httpx>=0.28.1",
	"itsdangerous>=2.2.0",
	"psycopg[binary]>=3.2.6",
	"pydantic-settings>=2.10.1",
	"pytest>=8.4.1",
	"redis>=7.3.0",
	"sqlmodel>=0.0.24",
	"uvicorn[standard]>=0.34.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
	"integration: exercises real service dependencies such as Redis",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["data"]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.pyright]
include = ["app", "tests"]
typeCheckingMode = "basic"
pythonVersion = "3.11"

[dependency-groups]
dev = [
	"pyright>=1.1.409",
	"ruff>=0.15.12",
]
